// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`preval a-bunch-of-checks: a-bunch-of-checks 1`] = `

const x = preval\`
  const fs = require('fs')
  const val = fs.readFileSync(require.resolve('./fixture1.md'), 'utf8')
  module.exports = {
    val,
    getSplit: function(splitDelimiter) {
      return x.val.split(splitDelimiter)
    }
  }
\`

      ↓ ↓ ↓ ↓ ↓ ↓

const x = {
  val: '# fixture\\n\\nThis is some file thing...\\n',
  getSplit: function(splitDelimiter) {
    return x.val.split(splitDelimiter)
  },
}


`;

exports[`preval absolute-path: absolute-path 1`] = `

const x = preval.require("../__tests__/fixtures/nested/absolute-path")

      ↓ ↓ ↓ ↓ ↓ ↓

const x = '<PROJECT_ROOT>/src/__tests__/index.js'


`;

exports[`preval dynamic error: dynamic error 1`] = `

const x = preval\`module.exports = "\${dynamic}"\`

      ↓ ↓ ↓ ↓ ↓ ↓

Error: <PROJECT_ROOT>/src/__tests__/index.js: Unable to determine the value of your preval string

`;

exports[`preval export undefined: export undefined 1`] = `

// @preval
let smth = {}
module.exports = smth.UNDEFINED;

      ↓ ↓ ↓ ↓ ↓ ↓

// this file was prevaled
module.exports = undefined


`;

exports[`preval handles transpiled modules (uses default export): handles transpiled modules (uses default export) 1`] = `

let one = preval.require('./fixtures/es6-identity.js', 1)

      ↓ ↓ ↓ ↓ ↓ ↓

let one = 1


`;

exports[`preval import comment (with extras before): import comment (with extras before) 1`] = `

import x from /* this is extra stuff */ /* preval */ "./fixtures/compute-one.js"

      ↓ ↓ ↓ ↓ ↓ ↓

const x = 1


`;

exports[`preval import comment (with extras): import comment (with extras) 1`] = `

import x from /* preval */ /* this is extra stuff */ "./fixtures/compute-one.js"

      ↓ ↓ ↓ ↓ ↓ ↓

const x = 1


`;

exports[`preval import comment: import comment 1`] = `

import x from /* preval */ "./fixtures/compute-one.js"

      ↓ ↓ ↓ ↓ ↓ ↓

const x = 1


`;

exports[`preval import object arg: import object arg 1`] = `

import x from /* preval({object: "argument", withFunction: () => {}}) */ "./fixtures/identity.js"

      ↓ ↓ ↓ ↓ ↓ ↓

const x = {
  object: 'argument',
  withFunction: () => {},
}


`;

exports[`preval import required arg: import required arg 1`] = `

import x from /* preval(require("./fixtures/compute-one")) */ "./fixtures/identity"

      ↓ ↓ ↓ ↓ ↓ ↓

const x = 1


`;

exports[`preval import string arg: import string arg 1`] = `

import x from /* preval("string argument") */ "./fixtures/identity.js"

      ↓ ↓ ↓ ↓ ↓ ↓

const x = 'string argument'


`;

exports[`preval require functions: require functions 1`] = `

const x = preval.require("./fixtures/multiple-functions")

      ↓ ↓ ↓ ↓ ↓ ↓

const x = {
  a: function a() {
    return 'a'
  },
  b: function b() {
    return 'b'
  },
}


`;

exports[`preval require with arg but not a function: require with arg but not a function 1`] = `

const x = preval.require("./fixtures/compute-one", "should not be here...")

      ↓ ↓ ↓ ↓ ↓ ↓

Error: <PROJECT_ROOT>/src/__tests__/index.js: \`preval.require\`-ed module (src/__tests__/index.js) cannot accept arguments because it does not export a function. You passed the arguments: should not be here...

`;

exports[`preval require with arge: require with arge 1`] = `

const x = preval.require("./fixtures/identity", 3)

      ↓ ↓ ↓ ↓ ↓ ↓

const x = 3


`;

exports[`preval require with unknown arg: require with unknown arg 1`] = `

const x = preval.require("./fixtures/identity", SOME_UNKNOWN_VARIABLE)

      ↓ ↓ ↓ ↓ ↓ ↓

Error: <PROJECT_ROOT>/src/__tests__/index.js: preval cannot determine the value of an argument in preval.require

`;

exports[`preval simple comment: simple comment 1`] = `

// @preval
module.exports = 1 + 2 - 1 - 1

      ↓ ↓ ↓ ↓ ↓ ↓

// this file was prevaled
module.exports = 1


`;

exports[`preval simple function: simple function 1`] = `

const y = preval\`
  module.exports = {
    booyah: function() {
      return "booyah"
    }
  }
\`

      ↓ ↓ ↓ ↓ ↓ ↓

const y = {
  booyah: function() {
    return 'booyah'
  },
}


`;

exports[`preval simple number: simple number 1`] = `

const x = preval\`module.exports = 1\`

      ↓ ↓ ↓ ↓ ↓ ↓

const x = 1


`;

exports[`preval simple require: simple require 1`] = `

const x = preval.require("./fixtures/compute-one")

      ↓ ↓ ↓ ↓ ↓ ↓

const x = 1


`;

exports[`preval simple string: simple string 1`] = `

preval\`module.exports = "foo"\`

      ↓ ↓ ↓ ↓ ↓ ↓

'foo'


`;

exports[`preval with flow after: with flow after 1`] = `

// @preval
// @flow
module.exports = 1 + 2 - 1 - 1

      ↓ ↓ ↓ ↓ ↓ ↓

// this file was prevaled
// @flow
module.exports = 1


`;

exports[`preval with flow before: with flow before 1`] = `

// @flow
// @preval
module.exports = 1 + 2 - 1 - 1

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
// this file was prevaled
module.exports = 1


`;
